--- a/Public_All/jadwal_praktikum.html
+++ b/Public_All/jadwal_praktikum.html
@@ -280,7 +280,7 @@
       <line x1="16" y1="17" x2="8" y2="17"></line>
       <polyline points="10 9 9 9 8 9"></polyline>
     </svg>
-    Modul Praktikum
+    Modul dan SOP Praktikum
   </a>
     <a href="jadwal_praktikum.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -418,3 +418,4 @@
 </script>
 
 </body>
+
