--- a/Public_All/jadwal_praktikum.html
+++ b/Public_All/jadwal_praktikum.html
@@ -360,7 +360,7 @@
     <p class="jadwal-title">
       Jadwal Praktikum Fisika Dasar 1 & Fisika Mekanika Semester Gasal 2025/2026
     </p>  
-    <img src="gambar_web/Jadwal Praktikum.jpg" alt="Jadwal Praktikum" class="jadwal-img"/>
+    <img src="gambar_web/JadwalFisikaMekanika2526.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
 </div>
 
@@ -371,7 +371,7 @@
     <p class="jadwal-title">
       Jadwal Asisten Laboratorium Praktikum Fisika Dasar 1 & Fisika Mekanika Semester Gasal 2025/2026
     </p>  
-    <img src="gambar_web/Jadwal Aslab.jpg" alt="Jadwal Praktikum" class="jadwal-img"/>
+    <img src="gambar_web/JadwalAslabFismek2526.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
 </div>
 <script>
@@ -418,4 +418,5 @@
 </script>
 
 </body>
+
 
