--- a/Public_All/jadwal_praktikum.html
+++ b/Public_All/jadwal_praktikum.html
@@ -358,7 +358,7 @@
   <a href="https://docs.google.com/spreadsheets/d/1vseo5jNuRPD0_kZI3LZ6jPVQA6vpdAWiUEyg9loVFRc/edit?gid=1281083401#gid=1281083401" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
-      Jadwal Praktikum Fisika Dasar 1 & Fisika Mekanika Semester Gasal 2025/2026
+      Jadwal Praktikum Fisika Mekanika Semester Gasal 2025/2026
     </p>  
     <img src="gambar_web/JadwalFisikaMekanika2526.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
@@ -369,7 +369,7 @@
   <a href="https://docs.google.com/spreadsheets/d/1k3JorHqk5c3AzTnE5GacTt29LO4wUOecGHstW4DlpBg/edit?gid=227258487#gid=227258487" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
-      Jadwal Asisten Laboratorium Praktikum Fisika Dasar 1 & Fisika Mekanika Semester Gasal 2025/2026
+      Jadwal Asisten Laboratorium Praktikum Fisika Mekanika Semester Gasal 2025/2026
     </p>  
     <img src="gambar_web/JadwalAslabFismek2526.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
@@ -418,5 +418,6 @@
 </script>
 
 </body>
+
 
 
