--- a/Public_All/jadwal_praktikum.html
+++ b/Public_All/jadwal_praktikum.html
@@ -358,7 +358,7 @@
   <a href="https://drive.google.com/drive/folders/1Lrc1liUQj6fUN2nahQyEpGgITGqyz3Q4?usp=sharing" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
-      Id Card Praktikan Fisika Mekanika Semester Gasal 2025/2026
+      Jadwal Praktikum Fisika Mekanika Semester Gasal 2025/2026
     </p>  
     <img src="gambar_web/JadwalFisikaMekanika2526.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
@@ -418,6 +418,7 @@
 </script>
 
 </body>
+
 
 
 
