--- a/Public_All/kelompok_praktikan.html
+++ b/Public_All/kelompok_praktikan.html
@@ -375,7 +375,7 @@
   <a href="https://docs.google.com/spreadsheets/d/1k3JorHqk5c3AzTnE5GacTt29LO4wUOecGHstW4DlpBg/edit?gid=227258487#gid=227258487" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
-      Jadwal Asisten Laboratorium Praktikum Fisika Mekanika Semester Gasal 2025/2026
+       Id Card Praktikan Fisika Mekanika Semester Gasal 2025/2026
     </p>  
     <img src="gambar_web/Halaman Depan.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
@@ -433,5 +433,6 @@
 </script>
 
 </body>
+
 
 
