--- a/Public_All/jadwal_praktikum.html
+++ b/Public_All/jadwal_praktikum.html
@@ -355,7 +355,7 @@
 
 <!-- Jadwal Praktikum -->
 <div class="jadwal-card">
-  <a href="https://drive.google.com/drive/folders/1Lrc1liUQj6fUN2nahQyEpGgITGqyz3Q4?usp=sharing" 
+  <a href="https://docs.google.com/spreadsheets/d/1k3JorHqk5c3AzTnE5GacTt29LO4wUOecGHstW4DlpBg/edit?gid=227258487#gid=227258487" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
       Jadwal Praktikum Fisika Mekanika Semester Gasal 2025/2026
@@ -418,6 +418,7 @@
 </script>
 
 </body>
+
 
 
 
