--- a/Public_All/kelompok_praktikan.html
+++ b/Public_All/kelompok_praktikan.html
@@ -372,7 +372,7 @@
 
 <!-- Id Card Praktikan -->
 <div class="jadwal-card">
-  <a href="https://docs.google.com/spreadsheets/d/1k3JorHqk5c3AzTnE5GacTt29LO4wUOecGHstW4DlpBg/edit?gid=227258487#gid=227258487" 
+  <a href="https://drive.google.com/drive/folders/1Lrc1liUQj6fUN2nahQyEpGgITGqyz3Q4?usp=sharing" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
        Id Card Praktikan Fisika Mekanika Semester Gasal 2025/2026
@@ -433,6 +433,7 @@
 </script>
 
 </body>
+
 
 
 
