--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -361,7 +361,12 @@
   </div>
 
   <div class="module-list" id="moduleList">
-     <button onclick="window.open('https:', '_blank')">Modul Lengkap</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1WtIx3zV4FyMzGYdNojjJocSvrQmfncBV/view?usp=drive_link', '_blank')">Tata Tertib Selama Praktikum</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1pV0lkQPeB4sq0aB74Ve49gXPgHeL7Wei/view?usp=drive_link', '_blank')">Laboratory Rules for Practicum (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1tl1ekL7ye9kmtx4Ag8_rYEuqTZ4Qd9gc/view?usp=drive_link', '_blank')">SOP Praktikum</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1eTscTszSpq3SNOag3Z1bM5k9ZwBsSgIp/view?usp=drive_link', '_blank')">SOP Practicum(IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1YybhTJihUqpx5jMBAw8eTLe6bOs6S7xj/view?usp=sharing', '_blank')">Format Laporan dan Jurnal Praktikum</button>
+    <button onclick="window.open('https:', '_blank')">Modul Lengkap</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfyMQtYm8W1Gp3RWtBLA1KkB-dOOYhukFojkthdImB-qrw?e=i4YvxM', '_blank')">Pengenalan Alat Ukur Panjang</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUqoV-7fOt9IizSn169ameMBsX7JzaOvZSBGa4ioMS1RUA?e=fODB8B', '_blank')">Bola Jatuh Bebas</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Eap5L-Fj369NkiCxkZRSJoYBuMIIxc99SCZYY97QE8cHXA?e=L3lfHZ', '_blank')">Tetapan Pegas</button>
@@ -424,4 +429,5 @@
     });
 </script>
 </body>
+
 
