--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -375,9 +375,9 @@
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ERRh3Vf_-oBDt5P20t77MgQBK_Q9UMrf9B-9F9j1sV_T8w?e=p0QvuV', '_blank')">Koefisien Gesek</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZqRXSh7hsxDjM7vjzZISA0ByLJnkjNelPgPm8c_kvcKIQ?e=l1dQuo', '_blank')">Fletchers Trolley</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETHFUQybmABFjJDlZlvYdLgBE9vVsD3WvRyshvsGwD6AUA?e=x7wM6c', '_blank')">Momentum dan Tumbukan</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EeK6QiAGPSRKjV7KJP-vYHQBtqbnAN7mL88TE3vyiIqotg?e=rAVHdi', '_blank')">Momen Inersia Roda Berputar</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EeK6QiAGPSRKjV7KJP-vYHQBtqbnAN7mL88TE3vyiIqotg?e=rAVHdi', '_blank')">Momen Inersia Benda Tegar</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ERjpjzxcNstAkU4NaxcC9bYBisQ9re7s_a4qEQS26tly1g?e=5ZIOro', '_blank')">Bandul Fisis</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EeK6QiAGPSRKjV7KJP-vYHQBtqbnAN7mL88TE3vyiIqotg?e=ooqbj4', '_blank')">Momen Inersia Roda Berputar</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EbTyWwWeC_pJsn51jNzXgIYBlbSOW6WUlMotbVisz8dnRA?e=UNn8Y1', '_blank')">Momen Inersia Roda Berputar</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZ0R-rFq3qhHrSAVrXuDvLkBr2fVeaB93U8Q-DXCR7P_JA?e=eOmVjc', '_blank')">Tekanan Hidrostatis Tabung U</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfRk4cd_3DFDtBZlWR63YdUB0iuN7ZSOGurfn54nu9Ru1Q?e=yRDx3D', '_blank')">Viskositas Metode Bola Jatuh</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ea18-URIa65NvX6rkuVq7qEBq9lJBbdbL5uDcflZ13zxzw?e=Xy9Pbc', '_blank')">Viskositas Metode Bola Ostwald</button>
@@ -429,6 +429,7 @@
     });
 </script>
 </body>
+
 
 
 
