--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -366,20 +366,21 @@
     <button onclick="window.open('https://drive.google.com/file/d/1tl1ekL7ye9kmtx4Ag8_rYEuqTZ4Qd9gc/view?usp=drive_link', '_blank')">SOP Praktikum</button>
     <button onclick="window.open('https://drive.google.com/file/d/1eTscTszSpq3SNOag3Z1bM5k9ZwBsSgIp/view?usp=drive_link', '_blank')">SOP Practicum (IUP)</button>
     <button onclick="window.open('https://drive.google.com/file/d/1YybhTJihUqpx5jMBAw8eTLe6bOs6S7xj/view?usp=sharing', '_blank')">Format Laporan dan Jurnal Praktikum</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EaTJklz6-bBEkNBS5sJb3zMBASriFt_uqr2Bi384s8eM0Q?e=FhfcpJ', '_blank')">Modul Lengkap</button>
+    <button onclick="window.open('https://drive.google.com/file/d/10yN7j5gJgAkGUPkvPZVv69Jl4pHIBDQ5/view?usp=sharing', '_blank')">Lembar Jiplak Folio Bergaris</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EU73aFY1v7JFj9yr9lPp6-4B3Bh74T7pCUsxGOVlHZ5Aow?e=LgYvZu', '_blank')">Modul Lengkap</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Efpj8x0yzjROvVDmtLzX4TAB8_bi2mCAD-cPzYq4PF189Q?e=hLzz8y', '_blank')">Pengenalan Alat Ukur Panjang</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Edis-QU_c5NFsOWi0PMmNqkB3Ia0slJGVeU_Ch0uo_Ziig?e=aU953D', '_blank')">Bola Jatuh Bebas</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZuGRn2kgsxNmHxV9ygDtEoB_osWe3hKJDG-33XeEwqEXA?e=PeehIe', '_blank')">Tetapan Pegas</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfQDn9OwneRDna0nSzE0IGsB0Da1QkWkwjJoBiZyh9MwFg?e=a0Kej7', '_blank')">Tetapan Pegas</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETKNHfq_6rhMi6hnAj5sdfkBeMgM3F3Vi9auaJPBntKwAA?e=UXuPME', '_blank')">Bandul Matematis</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EVS9J7M705NEkxH5PkfiFFsBVZbdHdk5VZ8hZ_ni1-HcfA?e=ZxmM8v', '_blank')">Gerak Peluru</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EdX8K9qr_lNFo-Lc2nvfxn8BnayLNBpRl5aNOyfVwrJI_g?e=JYR8wd', '_blank')">Koefisien Gesek</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EdFdh0HAnAtKh5WxLxm_8ocBuDIDyG8CYFzPb9JAZAn9UA?e=vEWd3h', '_blank')">Koefisien Gesek</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ESa0xTvxJpxLubEdulMw6SMB8veShJX8hDPZlaUAWBz49Q?e=lqgYwK', '_blank')">Fletchers Trolley</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETtAWYYCw25Lsfm_UtF8XFAB0lzugLyRMd6y_AsOszxV3g?e=2Mv1Kb', '_blank')">Momentum dan Tumbukan</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUamVc7LldFAhI2sKG7j2sQBAgEuinsC_6-CzpB19VkguA?e=5gzKvv', '_blank')">Momen Inersia Benda Tegar</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EQzhSEAhy5NAgtmpnl5u3n0B11iWpgf71PJRWj5Rps-sEQ?e=Ca6t18', '_blank')">Momen Inersia Benda Tegar</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfGvTvcwHLpPk6vEPvddIRgBm4vLooUnKbjDxcviWHnL6w?e=Qy8aEK', '_blank')">Bandul Fisis</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EbCYiQjZzSZMt88Lx_P48cgBf90FbDVMcU51UtWr9OL0pQ?e=nU6T76', '_blank')">Momen Inersia Roda Berputar</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUUuuf5-2IpEpYyb851BdAUBwB6s7iQDB8qq3f_Ol4chew?e=8vQXeh', '_blank')">Tekanan Hidrostatis Tabung U</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ea9wV7PIUiNKkEL5Rb7yZZIBJTDdJW9J0EtHc06hXnaHXA?e=0371Ms', '_blank')">Viskositas Metode Bola Jatuh</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ed4fmKnrJ-lBk8K7rdtyYDkBr1EptytZAl19M2wsc8tzOw?e=fEFJhI', '_blank')">Viskositas Metode Bola Jatuh</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EehpgwYQuKlLpKqsOqqiRm0BO-HnigbIMoLEQZyo-KDWVA?e=iaWxnb', '_blank')">Viskositas Metode Bola Ostwald</button>
     
   </div>
@@ -429,6 +430,7 @@
     });
 </script>
 </body>
+
 
 
 
