--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -367,7 +367,7 @@
     <button onclick="window.open('https://drive.google.com/file/d/1eTscTszSpq3SNOag3Z1bM5k9ZwBsSgIp/view?usp=drive_link', '_blank')">SOP Practicum (IUP)</button>
     <button onclick="window.open('https://drive.google.com/file/d/1YybhTJihUqpx5jMBAw8eTLe6bOs6S7xj/view?usp=sharing', '_blank')">Format Laporan dan Jurnal Praktikum</button>
     <button onclick="window.open('https://drive.google.com/file/d/10yN7j5gJgAkGUPkvPZVv69Jl4pHIBDQ5/view?usp=sharing', '_blank')">Lembar Jiplak Folio Bergaris</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EU73aFY1v7JFj9yr9lPp6-4B3Bh74T7pCUsxGOVlHZ5Aow?e=LgYvZu', '_blank')">Modul Lengkap</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EU73aFY1v7JFj9yr9lPp6-4B3Bh74T7pCUsxGOVlHZ5Aow?e=LgYvZu', '_blank')">Modul Lengkap Versi Bahasa Indonesia</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Efpj8x0yzjROvVDmtLzX4TAB8_bi2mCAD-cPzYq4PF189Q?e=hLzz8y', '_blank')">Pengenalan Alat Ukur Panjang</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Edis-QU_c5NFsOWi0PMmNqkB3Ia0slJGVeU_Ch0uo_Ziig?e=aU953D', '_blank')">Bola Jatuh Bebas</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfQDn9OwneRDna0nSzE0IGsB0Da1QkWkwjJoBiZyh9MwFg?e=a0Kej7', '_blank')">Tetapan Pegas</button>
@@ -430,6 +430,7 @@
     });
 </script>
 </body>
+
 
 
 
