--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -368,21 +368,35 @@
     <button onclick="window.open('https://drive.google.com/file/d/1YybhTJihUqpx5jMBAw8eTLe6bOs6S7xj/view?usp=sharing', '_blank')">Format Laporan dan Jurnal Praktikum</button>
     <button onclick="window.open('https://drive.google.com/file/d/10yN7j5gJgAkGUPkvPZVv69Jl4pHIBDQ5/view?usp=sharing', '_blank')">Lembar Jiplak Folio Bergaris</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EU73aFY1v7JFj9yr9lPp6-4B3Bh74T7pCUsxGOVlHZ5Aow?e=LgYvZu', '_blank')">Modul Lengkap Versi Bahasa Indonesia</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EcnVC45xGmRIl1mKQ_YJUb0BxmEbOnkdLFXl6pqwmB43Hg?e=VZDYdr', '_blank')">The Complete Module (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Efpj8x0yzjROvVDmtLzX4TAB8_bi2mCAD-cPzYq4PF189Q?e=hLzz8y', '_blank')">Pengenalan Alat Ukur Panjang</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ecekt5V7dANLrxzWuo9J2eIBMOmeHSuHBT-QjfdqXkvlig?e=zTm6kh', '_blank')">Measuring Instruments (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Edis-QU_c5NFsOWi0PMmNqkB3Ia0slJGVeU_Ch0uo_Ziig?e=aU953D', '_blank')">Bola Jatuh Bebas</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EftLg8xsTLVHq-rLxMgjiXMBbpG8qJSY0wEukDRjEyHOoA?e=OIsMFa', '_blank')">Free-Fall Experiment (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfQDn9OwneRDna0nSzE0IGsB0Da1QkWkwjJoBiZyh9MwFg?e=a0Kej7', '_blank')">Tetapan Pegas</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETtTH9tcnctHh6t1V7oEkHEBGixILf67kZelTYse4kiHAQ?e=3PhSL7', '_blank')">Spring Constant (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETKNHfq_6rhMi6hnAj5sdfkBeMgM3F3Vi9auaJPBntKwAA?e=UXuPME', '_blank')">Bandul Matematis</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EWzRc-1XMrhLuzKOBiDGWpwBts2ZWSUIAX2Oe8gOSn3PxA?e=b8KXz7', '_blank')">Mathematical Pendulum (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EVS9J7M705NEkxH5PkfiFFsBVZbdHdk5VZ8hZ_ni1-HcfA?e=ZxmM8v', '_blank')">Gerak Peluru</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ER1gq0Q8QjlBkzQjhIX50vwBX37QKCPP8eayWhE96Nhx7g?e=AbLcuk', '_blank')">Projectile Motion (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EdFdh0HAnAtKh5WxLxm_8ocBuDIDyG8CYFzPb9JAZAn9UA?e=vEWd3h', '_blank')">Koefisien Gesek</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EV18yLuY34pMuBF7sK9N1V8B5KmzHO_W_kCK7hlC25hzqQ?e=aE8aOa', '_blank')">Coefficient of Friction (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ESa0xTvxJpxLubEdulMw6SMB8veShJX8hDPZlaUAWBz49Q?e=lqgYwK', '_blank')">Fletchers Trolley</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EVMYbCWMUFNKq1jEeAcFfCcB8qqF_bmtGnEcHj2fOqbcXQ?e=20m4gY', '_blank')">Fletchers Trolley (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETtAWYYCw25Lsfm_UtF8XFAB0lzugLyRMd6y_AsOszxV3g?e=2Mv1Kb', '_blank')">Momentum dan Tumbukan</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETregTozeixPpfm7f8yXLE4BeaMGaUGmPpABdMxAdyJfCg?e=iErrB9', '_blank')">Momentum and Collision (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EQzhSEAhy5NAgtmpnl5u3n0B11iWpgf71PJRWj5Rps-sEQ?e=Ca6t18', '_blank')">Momen Inersia Benda Tegar</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZcUXAvArtBJsG67nwnfcc0Be6DXCW-Zc76RWjc_78Hh8A?e=DehBbX', '_blank')">Moment of Inertia of a Rigid Body (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfGvTvcwHLpPk6vEPvddIRgBm4vLooUnKbjDxcviWHnL6w?e=Qy8aEK', '_blank')">Bandul Fisis</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZomv6O6pBdKho3ZL28lArQBuJpGKcoptN4tKBI6fVFlsA?e=b9MumU', '_blank')">Physical Pendulum (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EbCYiQjZzSZMt88Lx_P48cgBf90FbDVMcU51UtWr9OL0pQ?e=nU6T76', '_blank')">Momen Inersia Roda Berputar</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EahOi7ZcDftKpPS8s4bXsrcBTOcAtnhtskMDKj2u3afgKw?e=0K5ruc', '_blank')">Moment of Inertia of a Rotating Wheel (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUUuuf5-2IpEpYyb851BdAUBwB6s7iQDB8qq3f_Ol4chew?e=8vQXeh', '_blank')">Tekanan Hidrostatis Tabung U</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUen0ufde8tFq_FtJeEdjs0By_u0g6EFr5vMFRykGJ9LFQ?e=nyhDFS', '_blank')">Hydrostatic Pressure in a U-Tube (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ed4fmKnrJ-lBk8K7rdtyYDkBr1EptytZAl19M2wsc8tzOw?e=fEFJhI', '_blank')">Viskositas Metode Bola Jatuh</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ec6wVEkmG9BJkntUYY581yEB1iINlQyglda52a1ugaFCpA?e=H4saiE', '_blank')">Viscosity by the Falling Sphere Method (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EehpgwYQuKlLpKqsOqqiRm0BO-HnigbIMoLEQZyo-KDWVA?e=iaWxnb', '_blank')">Viskositas Metode Bola Ostwald</button>
-    
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EYe-4epR38FBkvXOXmOu_7sBBDg-UXoQ6fFsh0eOGb7z1g?e=uSnSJu', '_blank')">Viscosity by the Ostwald Method (IUP)</button>  
   </div>
 
 </div>
@@ -430,6 +444,7 @@
     });
 </script>
 </body>
+
 
 
 
