--- a/Public_All/kontak_aslab.html
+++ b/Public_All/kontak_aslab.html
@@ -705,7 +705,15 @@
         </div>
         <a href="https://wa.me/6287831564135" target="_blank" class="chat-btn text-green-600 font-semibold">Chat</a>
     </div>
-    
+
+   <div class="aslab-card flex justify-between items-center bg-white p-4 rounded-2xl shadow">
+        <div>
+            <div class="font-bold nama">Dhimas Fadhlan Munif</div>
+            <div class="text-sm text-gray-600 nomor">081381564177</div>
+        </div>
+        <a href="https://wa.me/6281381564177" target="_blank" class="chat-btn text-green-600 font-semibold">Chat</a>
+    </div>
+  
     <div class="aslab-card flex justify-between items-center bg-white p-4 rounded-2xl shadow">
         <div>
             <div class="font-bold nama">David Wijaya</div>
@@ -801,7 +809,15 @@
         </div>
         <a href="https://wa.me/6281336923305" target="_blank" class="chat-btn text-green-600 font-semibold">Chat</a>
     </div>
-    
+
+      <div class="aslab-card flex justify-between items-center bg-white p-4 rounded-2xl shadow">
+        <div>
+            <div class="font-bold nama">Fadilah Siti Mukaromah</div>
+            <div class="text-sm text-gray-600 nomor">089612074309</div>
+        </div>
+        <a href="https://wa.me/6289612074309" target="_blank" class="chat-btn text-green-600 font-semibold">Chat</a>
+    </div>
+  
     <div class="aslab-card flex justify-between items-center bg-white p-4 rounded-2xl shadow">
         <div>
             <div class="font-bold nama">Faizal Fitrohni</div>
@@ -1602,6 +1618,7 @@
 </script>
 
 </body>
+
 
 
 
