--- a/Public_All/penilaian_praktikan.html
+++ b/Public_All/penilaian_praktikan.html
@@ -400,6 +400,7 @@
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Daniel Aji Perdana</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Dava Ferdiansyah</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">David Wijaya</button>
+  <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Dhimas Fadhlan Munif</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Dimas Alvin Apriyanto</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Dimas Setyo Asmoro</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Dinda Elisya Ariyanto</button>
@@ -411,6 +412,7 @@
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Ermildha Farah Ristanto</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Erna Nur Hidayah</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Ezra Muhammad Ellias</button>
+  <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Fadilah Siti Mukaromah</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Faizal Fitrohni</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Fajar Ali Musa Nasution</button>
   <button onclick="window.open('https://docs.google.com/spreadsheets/d/1azWslED-ILJX2OPQembmofuMB9ycI78svKDKU_cY6Lc/edit?usp=sharing', '_blank')">Fania Natasya Ramadhani</button>
@@ -550,5 +552,6 @@
     });
 </script>
 </body>
+
 
 
