--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -369,7 +369,7 @@
     <button onclick="window.open('https://drive.google.com/file/d/10yN7j5gJgAkGUPkvPZVv69Jl4pHIBDQ5/view?usp=sharing', '_blank')">Lembar Jiplak Folio Bergaris</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EU73aFY1v7JFj9yr9lPp6-4B3Bh74T7pCUsxGOVlHZ5Aow?e=LgYvZu', '_blank')">Modul Lengkap Versi Bahasa Indonesia</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EcnVC45xGmRIl1mKQ_YJUb0BxmEbOnkdLFXl6pqwmB43Hg?e=VZDYdr', '_blank')">The Complete Module (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Efpj8x0yzjROvVDmtLzX4TAB8_bi2mCAD-cPzYq4PF189Q?e=hLzz8y', '_blank')">Pengenalan Alat Ukur Panjang</button>
+    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Efpj8x0yzjROvVDmtLzX4TAB8_bi2mCAD-cPzYq4PF189Q?e=fsEnyr', '_blank')">Pengenalan Alat Ukur Panjang</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ecekt5V7dANLrxzWuo9J2eIBMOmeHSuHBT-QjfdqXkvlig?e=zTm6kh', '_blank')">Measuring Instruments (IUP)</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Edis-QU_c5NFsOWi0PMmNqkB3Ia0slJGVeU_Ch0uo_Ziig?e=aU953D', '_blank')">Bola Jatuh Bebas</button>
     <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EftLg8xsTLVHq-rLxMgjiXMBbpG8qJSY0wEukDRjEyHOoA?e=OIsMFa', '_blank')">Free-Fall Experiment (IUP)</button>
@@ -444,6 +444,7 @@
     });
 </script>
 </body>
+
 
 
 
