--- a/Public_All/jadwal_praktikum.html
+++ b/Public_All/jadwal_praktikum.html
@@ -371,7 +371,7 @@
     <p class="jadwal-title">
       Jadwal Asisten Laboratorium Praktikum Fisika Mekanika Semester Gasal 2025/2026
     </p>  
-    <img src="gambar_web/JadwalAslabFismek2526.png" alt="Jadwal Praktikum" class="jadwal-img"/>
+    <img src="gambar_web/jadwal aslab update 492025.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
 </div>
 <script>
@@ -418,6 +418,7 @@
 </script>
 
 </body>
+
 
 
 
