--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -365,38 +365,37 @@
     <button onclick="window.open('https://drive.google.com/file/d/1pV0lkQPeB4sq0aB74Ve49gXPgHeL7Wei/view?usp=drive_link', '_blank')">Laboratory Rules for Practicum (IUP)</button>
     <button onclick="window.open('https://drive.google.com/file/d/1tl1ekL7ye9kmtx4Ag8_rYEuqTZ4Qd9gc/view?usp=drive_link', '_blank')">SOP Praktikum</button>
     <button onclick="window.open('https://drive.google.com/file/d/1eTscTszSpq3SNOag3Z1bM5k9ZwBsSgIp/view?usp=drive_link', '_blank')">SOP Practicum (IUP)</button>
-    <button onclick="window.open('https://drive.google.com/file/d/1YybhTJihUqpx5jMBAw8eTLe6bOs6S7xj/view?usp=sharing', '_blank')">Format Laporan dan Jurnal Praktikum</button>
-    <button onclick="window.open('https://drive.google.com/file/d/10yN7j5gJgAkGUPkvPZVv69Jl4pHIBDQ5/view?usp=sharing', '_blank')">Lembar Jiplak Folio Bergaris</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EU73aFY1v7JFj9yr9lPp6-4B3Bh74T7pCUsxGOVlHZ5Aow?e=LgYvZu', '_blank')">Modul Lengkap Versi Bahasa Indonesia</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EcRnp3RtLL9HpgrK34gQS7UBypbeIoAlZbFfUNLMvNOqSQ?e=5aJNAs', '_blank')">The Complete Module (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Efpj8x0yzjROvVDmtLzX4TAB8_bi2mCAD-cPzYq4PF189Q?e=fsEnyr', '_blank')">Pengenalan Alat Ukur Panjang</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ecekt5V7dANLrxzWuo9J2eIBMOmeHSuHBT-QjfdqXkvlig?e=zTm6kh', '_blank')">Measuring Instruments (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Edis-QU_c5NFsOWi0PMmNqkB3Ia0slJGVeU_Ch0uo_Ziig?e=aU953D', '_blank')">Bola Jatuh Bebas</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EftLg8xsTLVHq-rLxMgjiXMBbpG8qJSY0wEukDRjEyHOoA?e=OIsMFa', '_blank')">Free-Fall Experiment (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfQDn9OwneRDna0nSzE0IGsB0Da1QkWkwjJoBiZyh9MwFg?e=a0Kej7', '_blank')">Tetapan Pegas</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETtTH9tcnctHh6t1V7oEkHEBGixILf67kZelTYse4kiHAQ?e=3PhSL7', '_blank')">Spring Constant (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETKNHfq_6rhMi6hnAj5sdfkBeMgM3F3Vi9auaJPBntKwAA?e=UXuPME', '_blank')">Bandul Matematis</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EWzRc-1XMrhLuzKOBiDGWpwBts2ZWSUIAX2Oe8gOSn3PxA?e=b8KXz7', '_blank')">Mathematical Pendulum (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EVS9J7M705NEkxH5PkfiFFsBVZbdHdk5VZ8hZ_ni1-HcfA?e=ZxmM8v', '_blank')">Gerak Peluru</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ER1gq0Q8QjlBkzQjhIX50vwBX37QKCPP8eayWhE96Nhx7g?e=AbLcuk', '_blank')">Projectile Motion (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EdFdh0HAnAtKh5WxLxm_8ocBuDIDyG8CYFzPb9JAZAn9UA?e=vEWd3h', '_blank')">Koefisien Gesek</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EV18yLuY34pMuBF7sK9N1V8B5KmzHO_W_kCK7hlC25hzqQ?e=aE8aOa', '_blank')">Coefficient of Friction (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ESa0xTvxJpxLubEdulMw6SMB8veShJX8hDPZlaUAWBz49Q?e=lqgYwK', '_blank')">Fletchers Trolley</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EVMYbCWMUFNKq1jEeAcFfCcB8qqF_bmtGnEcHj2fOqbcXQ?e=20m4gY', '_blank')">Fletchers Trolley (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETtAWYYCw25Lsfm_UtF8XFAB0lzugLyRMd6y_AsOszxV3g?e=2Mv1Kb', '_blank')">Momentum dan Tumbukan</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/ETregTozeixPpfm7f8yXLE4BeaMGaUGmPpABdMxAdyJfCg?e=iErrB9', '_blank')">Momentum and Collision (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EQzhSEAhy5NAgtmpnl5u3n0B11iWpgf71PJRWj5Rps-sEQ?e=Ca6t18', '_blank')">Momen Inersia Benda Tegar</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZcUXAvArtBJsG67nwnfcc0Be6DXCW-Zc76RWjc_78Hh8A?e=DehBbX', '_blank')">Moment of Inertia of a Rigid Body (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EfGvTvcwHLpPk6vEPvddIRgBm4vLooUnKbjDxcviWHnL6w?e=Qy8aEK', '_blank')">Bandul Fisis</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EZomv6O6pBdKho3ZL28lArQBuJpGKcoptN4tKBI6fVFlsA?e=b9MumU', '_blank')">Physical Pendulum (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EbCYiQjZzSZMt88Lx_P48cgBf90FbDVMcU51UtWr9OL0pQ?e=nU6T76', '_blank')">Momen Inersia Roda Berputar</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EahOi7ZcDftKpPS8s4bXsrcBTOcAtnhtskMDKj2u3afgKw?e=0K5ruc', '_blank')">Moment of Inertia of a Rotating Wheel (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUUuuf5-2IpEpYyb851BdAUBwB6s7iQDB8qq3f_Ol4chew?e=8vQXeh', '_blank')">Tekanan Hidrostatis Tabung U</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EUen0ufde8tFq_FtJeEdjs0By_u0g6EFr5vMFRykGJ9LFQ?e=nyhDFS', '_blank')">Hydrostatic Pressure in a U-Tube (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ed4fmKnrJ-lBk8K7rdtyYDkBr1EptytZAl19M2wsc8tzOw?e=fEFJhI', '_blank')">Viskositas Metode Bola Jatuh</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/Ec6wVEkmG9BJkntUYY581yEB1iINlQyglda52a1ugaFCpA?e=H4saiE', '_blank')">Viscosity by the Falling Sphere Method (IUP)</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EehpgwYQuKlLpKqsOqqiRm0BO-HnigbIMoLEQZyo-KDWVA?e=iaWxnb', '_blank')">Viskositas Metode Bola Ostwald</button>
-    <button onclick="window.open('https://itsacid-my.sharepoint.com/:b:/g/personal/5001231091_student_its_ac_id/EYe-4epR38FBkvXOXmOu_7sBBDg-UXoQ6fFsh0eOGb7z1g?e=uSnSJu', '_blank')">Viscosity by the Ostwald Method (IUP)</button>  
+    <button onclick="window.open('https://drive.google.com/file/d/1YybhTJihUqpx5jMBAw8eTLe6bOs6S7xj/view?usp=sharing', '_blank')">Contoh Format Laporan Praktikum</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1VDpHqNcByw8ijQ_5HzB1lSyvU9XNggSl/view?usp=drive_link', '_blank')">Modul Lengkap Versi Bahasa Indonesia</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1r7_QpBTfBJI11OlAgehW5PwG2kBU-Jhs/view?usp=drive_link', '_blank')">The Complete Module (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1JG9uT9BeyqlDYWQ1saJtHxwCpPdhYaAY/view?usp=drive_link', '_blank')">Pengenalan Alat Ukur Panjang</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1jd3U_C39ABa9RaP40o9BDsbUqIhJYlAt/view?usp=drive_link', '_blank')">Measuring Instruments (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1XLtUaron7khfXKtko3Fdbbr6B8eoXCzB/view?usp=drive_link', '_blank')">Bola Jatuh Bebas</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1wa5ggqXBsVLg5mS6xJqoAwNrSPmfCscF/view?usp=drive_link', '_blank')">Free-Fall Experiment (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1wA4EkMFkkPR3mhiofKFfbI21XN7z04GM/view?usp=drive_link', '_blank')">Tetapan Pegas</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1Ox4X_yxcuWpbIzR3gRJx31H0UAvxNyWw/view?usp=drive_link', '_blank')">Spring Constant (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/13Be_rN0bqlsyhapzjdSLoFC4YhiWeTzg/view?usp=drive_link', '_blank')">Bandul Matematis</button>
+    <button onclick="window.open('https://drive.google.com/file/d/12EvEIQpU-pXn2JAa6_oPlTWr9GxLdxMa/view?usp=drive_link', '_blank')">Mathematical Pendulum (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1oVL4jIOIfcrKcpI4PpZSEyOq4Vr0Bs3h/view?usp=drive_link', '_blank')">Gerak Peluru</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1qySaay5S3ulqa13fdw_q6jOhVHhMIOLf/view?usp=drive_link', '_blank')">Projectile Motion (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1S9SEl0mcPEDe53LjEtiECO8FN73wWh3q/view?usp=drive_link', '_blank')">Koefisien Gesek</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1L9O8CSpkzPPzLoFkEoD-yJAwvM1ilau9/view?usp=drive_link', '_blank')">Coefficient of Friction (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/18rtmi62dLM4b_06nbONjyxI7mHc2INbK/view?usp=drive_link', '_blank')">Fletchers Trolley</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1sEi6LOtINRB7Z5feK3orCfKi4V1OhTQE/view?usp=drive_link', '_blank')">Fletchers Trolley (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1oraP6CVsm2pqaX_31CRNTGnc3onU21Ag/view?usp=drive_link', '_blank')">Momentum dan Tumbukan</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1j_1kxuKHuqlpWpWFk-gSoCOwvIZQZ3lv/view?usp=drive_link', '_blank')">Momentum and Collision (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1rQUdaLIeghbI9fC6s1bW6Togo6748XKX/view?usp=drive_link', '_blank')">Momen Inersia Benda Tegar</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1rQUdaLIeghbI9fC6s1bW6Togo6748XKX/view?usp=drive_link', '_blank')">Moment of Inertia of a Rigid Body (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1rb_s_QUafjoYsVZMWPT0YnH4xgOXFG66/view?usp=drive_link', '_blank')">Bandul Fisis</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1t0NdBMn6uwX8hbypVlXdyRfwNOIgSHNG/view?usp=drive_link', '_blank')">Physical Pendulum (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1SXPekyyYgqf9nf_eCeFRnTDX3iZ4uTbW/view?usp=drive_link', '_blank')">Momen Inersia Roda Berputar</button>
+    <button onclick="window.open('https://drive.google.com/file/d/16faDjrjgrbdWD-Fq0dA4-VTsnJaW52KZ/view?usp=drive_link', '_blank')">Moment of Inertia of a Rotating Wheel (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1H3yl-Bt_0AdfNeDD7Y2fnHJqWCARuzF1/view?usp=drive_link', '_blank')">Tekanan Hidrostatis Tabung U</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1gc9Z5ecUh4mLV_xCh4skOGi3osW7GE-n/view?usp=drive_link', '_blank')">Hydrostatic Pressure in a U-Tube (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1ODEpv1mrzHLMs04DPdPKrUslrFRPT-0i/view?usp=drive_link', '_blank')">Viskositas Metode Bola Jatuh</button>
+    <button onclick="window.open('https://drive.google.com/file/d/13yvIAAYMu6dakjWvYR0BZYSmRzd3VQIo/view?usp=drive_link', '_blank')">Viscosity by the Falling Sphere Method (IUP)</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1GNniOTGTPRYYMUKGWsX6y6qERMaiARb8/view?usp=drive_link', '_blank')">Viskositas Metode Bola Ostwald</button>
+    <button onclick="window.open('https://drive.google.com/file/d/1WBWkiILGjEdwtXUva2D9bIIMG-iwIzAm/view?usp=drive_link', '_blank')">Viscosity by the Ostwald Method (IUP)</button>  
   </div>
 
 </div>
@@ -444,6 +443,7 @@
     });
 </script>
 </body>
+
 
 
 
