--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -6,71 +6,97 @@
   <title>Laboratorium Fisika Dasar ITS</title>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
-
-
   <style>
-   body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  height: 100vh;
-  background: linear-gradient(-45deg, #e3e3e3, #d4d4d4, #f5f5f5, #eeeeee);
-  background-size: 400% 400%;
-  animation: gradientBG 10s ease infinite;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: sans-serif;
+      height: 100vh;
+      background: linear-gradient(-45deg, #e3e3e3, #d4d4d4, #f5f5f5, #eeeeee);
+      background-size: 400% 400%;
+      animation: gradientBG 10s ease infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-@keyframes gradientBG {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
+    @keyframes gradientBG {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
 
-
-   .box {
-  background-color: #113F64;
-  border-radius: 16px;
-  padding: 20px 10px;  /* <--- lebih lega atas bawah */
-  text-align: center;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
+    .box {
+      background-color: #113F64;
+      border-radius: 16px;
+      padding: 20px 30px;
+      text-align: center;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      color: white;
+    }
 
     .cover-image {
       width: 280px;
       max-width: 95%;
       height: auto;
       border-radius: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     h2 {
       font-family: sans-serif;
-      font-size: 10px;
-      color: black;
-      margin-bottom: 10px;
+      font-size: 18px;
+      margin-bottom: 15px;
+      margin-top: -10px;
     }
 
-   button {
-  font-family: sans-serif;
-  padding: 15px 30px;
-  font-size: 16px;
-  background: #065084;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background 0.3s;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  display: block;
-  margin: -25px auto 0 auto;  /* <--- Tambahkan margin atas 30px */
-}
+    input[type="password"], input[type="text"] {
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      width: 80%;
+      margin-bottom: 10px;
+      text-align: center;
+    }
 
+    .checkbox-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 14px;
+      color: #ddd;
+      margin-bottom: 15px;
+    }
+
+    .checkbox-container input {
+      margin-right: 8px;
+      transform: scale(1.2);
+    }
+
+    button {
+      font-family: sans-serif;
+      padding: 12px 30px;
+      font-size: 16px;
+      background: #065084;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
 
     button:hover {
       background: #113F78;
       transform: scale(1.03);
+    }
+
+    .error {
+      color: #ff4d4d;
+      font-size: 14px;
+      margin-top: 5px;
+      display: none;
     }
 
   </style>
@@ -78,9 +104,36 @@
 <body>
   <div class="box">
     <img src="gambar_web/logo dan wordmark background transparan.png" alt="Cover Lab Fisika" class="cover-image">
-    <h1></h1>
-    <button onclick="window.location.href='dasbor_all.html'">Masuk</button>
+    <h2>Login Website</h2>
+    <input type="password" id="password" placeholder=" Password">
+    
+    <div class="checkbox-container">
+      <input type="checkbox" id="showPassword" onclick="togglePassword()">
+      <label for="showPassword">Tampilkan Password</label>
+    </div>
+
+    <p class="error" id="error-msg">Password salah!</p>
+    <button onclick="checkPassword()">Masuk</button>
   </div>
-  
+
+  <script>
+    function checkPassword() {
+      const password = document.getElementById("password").value;
+      const errorMsg = document.getElementById("error-msg");
+      const correctPassword = "LABFISDASITS"; // ✅ Ganti password sesuai keinginan
+
+      if (password === correctPassword) {
+        window.location.href = "dasbor_all.html";
+      } else {
+        errorMsg.style.display = "block";
+      }
+    }
+
+    function togglePassword() {
+      const passwordField = document.getElementById("password");
+      const checkbox = document.getElementById("showPassword");
+      passwordField.type = checkbox.checked ? "text" : "password";
+    }
+  </script>
 </body>
 </html>
