--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -104,7 +104,7 @@
 <body>
   <div class="box">
     <img src="gambar_web/logo dan wordmark background transparan.png" alt="Cover Lab Fisika" class="cover-image">
-    <h2>Login Website</h2>
+    <h2>Halaman Login</h2>
     <input type="password" id="password" placeholder=" Password">
     
     <div class="checkbox-container">
@@ -137,3 +137,4 @@
   </script>
 </body>
 </html>
+
