--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Laboratorium Fisika Dasar ITS</title>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <link rel="icon" href="favicon.svg" type="image/svg+xml">
 
   <style>
     body {
@@ -137,4 +138,5 @@
   </script>
 </body>
 </html>
+
 
