--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Laboratorium Fisika Dasar ITS</title>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <link rel="icon" href="logo putih.svg" type="image/svg+xml">
+  <link rel="icon" href="logo-putih.png" type="image/png" sizes="32x32">
 
   <style>
     body {
@@ -138,6 +138,7 @@
   </script>
 </body>
 </html>
+
 
 
 
