--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Laboratorium Fisika Dasar ITS</title>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <link rel="icon" href="logo-putih.png" type="image/png" sizes="32x32">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Laboratorium Fisika Dasar ITS</title>
+
+<!-- Script background -->
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+
+<!-- Favicon -->
+<link rel="icon" href="logo-putih.svg" type="image/svg+xml">
+<link rel="alternate icon" href="logo putih.png" type="image/png" sizes="32x32">
+<link rel="apple-touch-icon" href="logo putih.png">
 
   <style>
     body {
@@ -138,6 +144,7 @@
   </script>
 </body>
 </html>
+
 
 
 
