--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -9,9 +9,9 @@
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 <!-- Favicon -->
-<link rel="icon" href="logo-putih.svg" type="image/svg+xml">
-<link rel="alternate icon" href="logo putih.png" type="image/png" sizes="32x32">
-<link rel="apple-touch-icon" href="logo putih.png">
+<link rel="icon" href="gambar_web/logo-putih.svg" type="image/svg+xml">
+<link rel="alternate icon" href="gambar_web/logo putih.png" type="image/png" sizes="32x32">
+<link rel="apple-touch-icon" href="gambar_web/logo putih.png">
 
   <style>
     body {
@@ -144,6 +144,7 @@
   </script>
 </body>
 </html>
+
 
 
 
