--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -10,7 +10,7 @@
 
 <!-- Favicon -->
 <link rel="icon" href="gambar_web/logo-putih.svg" type="image/svg+xml">
-<link rel="alternate icon" href="gambar_web/logo-putih.png" type="image/png" sizes="32x32">
+<link rel="icon" href="gambar_web/logo-putih.png" type="image/png" sizes="32x32">
 <link rel="apple-touch-icon" href="gambar_web/logo-putih.png">
 
   <style>
@@ -144,6 +144,7 @@
   </script>
 </body>
 </html>
+
 
 
 
