--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -9,7 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
 <!-- Favicon -->
-<link rel="icon" href="gambar_web/logo-putih.png" type="image/png" sizes="32x32">
+<link rel="icon" href="gambar_web/logo-putih.png?v=1" type="image/png" sizes="40x40">
 <link rel="apple-touch-icon" href="gambar_web/logo-putih.png">
 
   <style>
@@ -143,6 +143,7 @@
   </script>
 </body>
 </html>
+
 
 
 
