--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Laboratorium Fisika Dasar ITS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Laboratorium Fisika Dasar ITS</title>
 
-<!-- Script background -->
-<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <!-- Script background -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
-<!-- Favicon -->
-<link rel="icon" href="gambar_web/logo-putih.png?v=1" type="image/png" sizes="40x40">
-<link rel="apple-touch-icon" href="gambar_web/logo-putih.png">
+  <!-- Favicon -->
+  <!-- Default PNG favicon -->
+  <link rel="icon" href="gambar_web/logo-putih.png?v=2" type="image/png" sizes="32x32">
+
+  <!-- Apple devices (iPhone/iPad) -->
+  <link rel="apple-touch-icon" href="gambar_web/logo-putih.png?v=2">
+
+  <!-- Optional: ICO format for older browsers -->
+  <link rel="shortcut icon" href="gambar_web/logo-putih.ico?v=2" type="image/x-icon">
 
   <style>
     body {
@@ -143,6 +149,7 @@
   </script>
 </body>
 </html>
+
 
 
 
