--- a/Public_All/index.html
+++ b/Public_All/index.html
@@ -132,7 +132,7 @@
     function checkPassword() {
       const password = document.getElementById("password").value;
       const errorMsg = document.getElementById("error-msg");
-      const correctPassword = "LABFISDASITS"; // ✅ Ganti password sesuai keinginan
+      const correctPassword = "LABFISDASITS";
 
       if (password === correctPassword) {
         window.location.href = "dasbor_all.html";
@@ -149,6 +149,7 @@
   </script>
 </body>
 </html>
+
 
 
 
