--- a/Public_All/nilai_praktikan.html
+++ b/Public_All/nilai_praktikan.html
@@ -355,12 +355,12 @@
 
 <!-- Jadwal Praktikum -->
 <div class="jadwal-card">
-  <a href="https://docs.google.com/spreadsheets/d/12_mirSlczUf-2tTCHeiX7JbVw06x6LqTv22x9b-r5Gs/edit?usp=sharing" 
+  <a href="https://docs.google.com/spreadsheets/d/1C_dnnnPFpjsQq8mjcz75yjtNJvuDP4Gg/edit?usp=sharing&ouid=104454632356211772837&rtpof=true&sd=true" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
       Nilai Praktikan Fisika Mekanika Semester Gasal 2025/2026
     </p>  
-    <img src="gambar_web/nilaipraktikan.png" alt="Jadwal Praktikum" class="jadwal-img"/>
+    <img src="gambar_web/rekapnilai25.png" alt="Jadwal Praktikum" class="jadwal-img"/>
   </a>
 </div>
 
@@ -408,3 +408,4 @@
 </script>
 
 </body>
+
