--- a/Public_All/dasbor_all.html
+++ b/Public_All/dasbor_all.html
@@ -493,21 +493,9 @@
 
     document.getElementById('date-text').textContent = `${hari}, ${tanggal} ${bulan} ${tahun}`;
 
-const semesterMulai = new Date('2025-09-08');
-const now = new Date(); // pastikan variabel now ada
-
-// Hitung selisih hari dari awal semester
-const selisihHari = Math.floor((now - semesterMulai) / (1000 * 60 * 60 * 24));
-
-// Hitung minggu berjalan tanpa libur
-let mingguKe = selisihHari >= 0 ? Math.floor(selisihHari / 7) + 1 : 0;
-
-// Jika sudah lewat minggu ke-4, tambahkan jeda libur 2 minggu
-if (mingguKe > 4) {
-  mingguKe += 2;
-}
-
-console.log(mingguKe);
+    const semesterMulai = new Date('2025-09-22'); 
+    const selisihHari = Math.floor((now - semesterMulai) / (1000 * 60 * 60 * 24)); 
+    const mingguKe = selisihHari >= 0 ? Math.floor(selisihHari / 7) + 1 : 0;
 
 
     document.getElementById('minggu-text').textContent = `Minggu Praktikum ke-${mingguKe}`;
