--- a/Public_All/dasbor_all.html
+++ b/Public_All/dasbor_all.html
@@ -501,6 +501,11 @@ const selisihHari = Math.floor((now - semesterMulai) / (1000 * 60 * 60 * 24));
 
 let mingguKe = selisihHari >= 0 ? Math.floor(selisihHari / 7) + 1 : 0;
 
+// Kurangin 2 minggu libur setelah minggu ke-4
+if (mingguKe > 4) {
+  mingguKe += -2;
+}
+    
 document.getElementById('minggu-text').textContent = `Minggu Praktikum ke-${mingguKe}`;
 
     // Animasi 
@@ -541,6 +546,7 @@ function laporBug() {
   </script>
 </body>
 </html>
+
 
 
 
