--- a/Public_All/dasbor_all.html
+++ b/Public_All/dasbor_all.html
@@ -377,7 +377,7 @@
   </svg>
   Kontak Asisten Laboratorium
 </a>
-  <a href="penilaian_praktikan.html">
+  <!-- <a href="penilaian_praktikan.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M12 20h9"></path>
       <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
@@ -390,7 +390,7 @@
        stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
     <circle cx="12" cy="8" r="7"/>
     <polyline points="8.21 13.89 7 23 12 20 17 23 15.79 13.88"/>
-  </svg>
+  </svg> -->
     Nilai Praktikum
   </a>
   <a href="inventaris_laboratorium.html">
@@ -544,6 +544,7 @@ function laporBug() {
   </script>
 </body>
 </html>
+
 
 
 
