--- a/Public_All/modul_praktikum_all.html
+++ b/Public_All/modul_praktikum_all.html
@@ -323,13 +323,13 @@
   </svg>
   Kontak Asisten Laboratorium
 </a>
-  <a href="penilaian_praktikan.html">
+  <!-- <a href="penilaian_praktikan.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M12 20h9"></path>
       <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
     </svg>
     Penilaian Praktikan
-  </a>
+  </a> -->
     <a href="nilai_praktikan.html">
  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" 
        viewBox="0 0 24 24" fill="none" stroke="currentColor" 
@@ -443,6 +443,7 @@
     });
 </script>
 </body>
+
 
 
 
