--- a/Public_All/nilai_praktikan.html
+++ b/Public_All/nilai_praktikan.html
@@ -320,13 +320,13 @@
   </svg>
   Kontak Asisten Laboratorium
 </a>
-  <a href="penilaian_praktikan.html">
+  <!-- <a href="penilaian_praktikan.html">
     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
       <path d="M12 20h9"></path>
       <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
     </svg>
     Penilaian Praktikan
-  </a>
+  </a> -->
     <a href="nilai_praktikan.html">
  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" 
        viewBox="0 0 24 24" fill="none" stroke="currentColor" 
@@ -355,7 +355,7 @@
 
 <!-- Jadwal Praktikum -->
 <div class="jadwal-card">
-  <a href="https://docs.google.com/spreadsheets/d/1C_dnnnPFpjsQq8mjcz75yjtNJvuDP4Gg/edit?usp=sharing&ouid=104454632356211772837&rtpof=true&sd=true" 
+  <a href="https://itsacid.sharepoint.com/:x:/s/DepartemenFisika-LabFisdas/ETxNoDeDVU5AvbawB9Z0_lMB9oeTHXB3Ld_GRYXg1HddVg?e=84YXJd" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
       Nilai Praktikan Fisika Mekanika Semester Gasal 2025/2026
@@ -408,4 +408,5 @@
 </script>
 
 </body>
+
 
