--- a/Public_All/nilai_praktikan.html
+++ b/Public_All/nilai_praktikan.html
@@ -355,7 +355,7 @@
 
 <!-- Jadwal Praktikum -->
 <div class="jadwal-card">
-  <a href="https:https://itsacid.sharepoint.com/:x:/s/DepartemenFisika-LabFisdas/ETxNoDeDVU5AvbawB9Z0_lMBoch5wEI-WAY_5iaET_zqhA?e=2GeT6R" 
+  <a href="https://itsacid.sharepoint.com/:x:/s/DepartemenFisika-LabFisdas/ETxNoDeDVU5AvbawB9Z0_lMB9oeTHXB3Ld_GRYXg1HddVg" 
      class="jadwal-link" target="_blank">
     <p class="jadwal-title">
       Nilai Praktikan Fisika Mekanika Semester Gasal 2025/2026
@@ -408,6 +408,7 @@
 </script>
 
 </body>
+
 
 
 
